Fix weird mobile issues where the whole thing overflowed

--- a/styles/header.css
+++ b/styles/header.css
@@ -44,11 +44,7 @@ nav a:hover::before{
         width: 3rem;
     }
 }
-/* nav a:hover{
-    color: yellow;
-    /* text-decoration: underline;
-    text-underline-offset: 8px; */
-} */
+
 
 nav .underline{
     display: inline;
