--- a/styles/res.css
+++ b/styles/res.css
@@ -147,6 +147,7 @@
         top: 0;
         left: 0;
         right: 0;
+        width: 100vw;
         background-color: rgb(59, 17, 17);
         padding: 4px 12px;
         height: 44px;
@@ -319,3 +320,4 @@
         border: none;
     }
 }
+
